# frame

./: .env.example  .gitignore  PROMPT.md  README.md  SPEC.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: analysis.rs  ffmpeg.rs  files.rs  mod.rs  provenance.rs  queue.rs  scenes.rs  whisper.rs
src-tauri/src/plugins/: mod.rs  shot_list.rs
src/components/analysis/: AnalysisPanel.tsx
src/components/layout/: TitleBar.tsx
src/components/project-bin/: ProjectBin.tsx
src/components/provenance/: ProvenancePanel.tsx
src/components/queue/: QueueBar.tsx
src/components/settings/: SettingsModal.tsx
src/components/shot-list/: ShotListPanel.tsx
src/components/ui/: ProgressBar.tsx
src/components/video-preview/: VideoPreview.tsx
src/data/: mock.ts
src/hooks/: useWindowWidth.ts
src/lib/: analysis.ts  export.ts  format.ts  media.ts  provenance.ts  shots.ts  video-time.ts
src/stores/: appStore.ts
src/styles/: globals.css
src/types/: models.ts
