[package]
name = "frame"
version = "0.1.0"
description = "Offline-first video intelligence workstation"
authors = ["Codex"]
edition = "2021"

[lib]
name = "frame_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
dirs = "5"
